--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -120,6 +120,9 @@
             <a href="/about" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
               <i class="fas fa-info-circle mr-2"></i> About
             </a>
+            <a href="/status" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+              <i class="fas fa-heartbeat mr-2"></i> System Status
+            </a>
           </div>
         </div>
 
@@ -151,6 +154,12 @@
               </a>
               <a href="/rate-limits/request" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-tachometer-alt mr-2"></i> Request Rate Limit
+              </a>
+              <a href="/issues/report" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+                <i class="fas fa-ticket-alt mr-2"></i> Report an Issue
+              </a>
+              <a href="/issues" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+                <i class="fas fa-clipboard-list mr-2"></i> My Issues
               </a>
               <a href="/users/logout" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-sign-out-alt mr-2"></i> Logout
@@ -241,6 +250,9 @@
             <a href="/about" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-info-circle mr-2"></i> About
             </a>
+            <a href="/status" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-heartbeat mr-2"></i> System Status
+            </a>
           </div>
         </div>
 
@@ -270,6 +282,12 @@
             </a>
             <a href="/rate-limits/request" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-tachometer-alt mr-2"></i> Request Rate Limit
+            </a>
+            <a href="/issues/report" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-ticket-alt mr-2"></i> Report an Issue
+            </a>
+            <a href="/issues" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-clipboard-list mr-2"></i> My Issues
             </a>
             <a href="/users/logout" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-sign-out-alt mr-2"></i> Logout
